added animations on hero content text

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
                 <p><strong>Build a Strong Foundation</strong></p>
                 <p>Calisthenics is perfect for beginners, allowing you to build a solid foundation in fitness. Mastering the basics makes advanced movements easier and safer to perform over time.</p>
             </div>
+            <div class="card">
+                <p><strong>Cost-Effective</strong></p>
+                <p>Calisthenics requires no expensive equipment or gym memberships, making it an affordable way to achieve your fitness goals while staying healthy and strong.</p>
+            </div>     
         </div>
         </section>
         <section class="section">
