added files for my pages and i separate the files of nav bar and make my files organized

--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="style/navbar.css">
     <title>EladFit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
-    <script type="module" src="navbar.js"></script>
+    <script type="module" src="javascript/navbar.js"></script>
 </head>
 <body class="body">
     <nav id="navbar">
         <ul class="sidebar">
             <li class="close-button" onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFE3D8"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li><a href="#">Tutorials</a></li>
-            <li><a href="#">Programs</a></li>
-            <li><a href="#">Challenges</a></li>
-            <li><a href="#">Support Us</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="pages/tutorial.html">Tutorials</a></li>
+            <li><a href="pages/program.html">Programs</a></li>
+            <li><a href="pages/challenge.html">Challenges</a></li>
+            <li><a href="pages/supportUs.html">Support Us</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
         </ul>
         <ul>
             <li id="links"><a href="index.html">EladFit</a></li>
-            <li id="links" class="hideOnMobile"><a href="#">Tutorials</a></li>
-            <li id="links" class="hideOnMobile"><a href="#">Challenges</a></li>
-            <li id="links" class="hideOnMobile"><a href="#">Programs</a></li>
-            <li id="links" class="hideOnMobile"><a href="#">Support Us</a></li>
-            <li id="links" class="hideOnMobile"><a href="contact.html">Contact</a></li>
+            <li id="links" class="hideOnMobile"><a href="pages/tutorial.html">Tutorials</a></li>
+            <li id="links" class="hideOnMobile"><a href="pages/program.html">Challenges</a></li>
+            <li id="links" class="hideOnMobile"><a href="pages/challenge.html">Programs</a></li>
+            <li id="links" class="hideOnMobile"><a href="pages/supportUs.html">Support Us</a></li>
+            <li id="links" class="hideOnMobile"><a href="pages/contact.html">Contact</a></li>
             <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#F5F5F5"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
         </ul>
     </nav>
