Added content on every page

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <nav id="navbar">
         <ul class="sidebar">
             <li class="close-button" onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFE3D8"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li><a href="pages/tutorial.html">Tutorials</a></li>
-            <li><a href="pages/program.html">Programs</a></li>
+            <li><a href="pages/tutorial.html">Tutorials</a></li>        
             <li><a href="pages/challenge.html">Challenges</a></li>
-            <li><a href="pages/supportUs.html">Support Us</a></li>
+            <li><a href="pages/program.html">Programs</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="pages/about.html">About</a></li>
         </ul>
         <ul>
             <li id="links"><a href="index.html">EladFit</a></li>
             <li id="links" class="hideOnMobile"><a href="pages/tutorial.html">Tutorials</a></li>
-            <li id="links" class="hideOnMobile"><a href="pages/program.html">Challenges</a></li>
-            <li id="links" class="hideOnMobile"><a href="pages/challenge.html">Programs</a></li>
-            <li id="links" class="hideOnMobile"><a href="pages/supportUs.html">Support Us</a></li>
+            <li id="links" class="hideOnMobile"><a href="pages/challenge.html">Challenges</a></li>
+            <li id="links" class="hideOnMobile"><a href="pages/program.html">Programs</a></li>
             <li id="links" class="hideOnMobile"><a href="pages/contact.html">Contact</a></li>
+            <li id="links" class="hideOnMobile"><a href="pages/about.html">About</a></li>
             <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#F5F5F5"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
         </ul>
     </nav>
