--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/navbar.css">
+    <link rel="stylesheet" href="../style/pageheader.css">
     <title>EladFit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
@@ -11,8 +12,67 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
     <script type="module" src="../javascript/navbar.js"></script>
     <style>
-        .body {
-            background-color: yellow;
+        body {
+            min-height: 100%;
+        }
+
+        .section:first-child {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 2rem;
+        }
+
+        .contact-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            background: linear-gradient(45deg,#242E49, #B4182D);
+            gap: 3rem;
+            padding: 2rem;
+            width: 100%;
+        }
+
+        .contact-grid {
+            display: flex;
+            align-items: stretch;
+            justify-content: center;
+            gap: 1.5rem;
+            margin-top: 3rem;
+            flex-wrap: wrap;
+            width: 70%;
+        }
+
+        .contact-grid > * {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 2rem;
+            flex: 1;
+            background-color: #37415C;
+            border-radius: 10px;
+            box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+            gap: 0.5rem;      
+            
+        }
+
+        .contact-grid img{
+            width: 50px;
+            filter: invert(1);
+            opacity: .8;
+        }
+
+        .question-container {
+            padding: 2rem;
+        }
+
+        @media (max-width: 700px) {
+            .contact-grid {
+                width: 100%;
+            }
         }
     </style>
 </head>
@@ -20,21 +80,71 @@
     <nav id="navbar">
         <ul class="sidebar">
             <li class="close-button" onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFE3D8"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li><a href="tutorial.html">Tutorials</a></li>
-            <li><a href="program.html">Programs</a></li>
-            <li><a href="challenge.html">Challenges</a></li>
-            <li><a href="supportUs.html">Support Us</a></li>
+            <li><a href="tutorial.html">Tutorials</a></li>          
+            <li><a href="challenge.html">Challenges</a></li> 
+            <li><a href="program.html">Programs</a></li>         
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
         <ul>
             <li id="links"><a href="../index.html">EladFit</a></li>
             <li id="links" class="hideOnMobile"><a href="tutorial.html">Tutorials</a></li>
-            <li id="links" class="hideOnMobile"><a href="program.html">Challenges</a></li>
-            <li id="links" class="hideOnMobile"><a href="challenge.html">Programs</a></li>
-            <li id="links" class="hideOnMobile"><a href="supportUs.html">Support Us</a></li>
+            <li id="links" class="hideOnMobile"><a href="challenge.html">Challenges</a></li>
+            <li id="links" class="hideOnMobile"><a href="program.html">Programs</a></li>
             <li id="links" class="hideOnMobile"><a href="contact.html">Contact</a></li>
+            <li id="links" class="hideOnMobile"><a href="about.html">About</a></li>
             <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#F5F5F5"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
         </ul>
     </nav>
+    <main>
+        <header>
+            <div class="header-navigation">
+                <h1>Contact</h1>
+                <p><a href="../index.html"">Home</a> / Contact</p>
+            </div>
+        </header>
+        <section class="section">
+            <div class="contact-container">
+                <div class="contact-grid">
+                    <div class="item">
+                        <div>
+                            <img src="../Assets/Icons/gps.png">
+                            <h2>Address</h2>
+                        </div>
+                        <p>2812 Bicoleyte Commonwealth Quezon City</p>
+                    </div>
+                    <div class="item">
+                        <div>
+                            <img src="../Assets/Icons/email.png">
+                            <h2>Email</h2>
+                        </div>
+                        <div>
+                            <p>christdalecruz@gmail.com</p>
+                            <p>christdaleesteban2201@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div>
+                            <img src="../Assets/Icons/phone-call.png">
+                            <h2>Call Now</h2>
+                        </div>
+                        <div>
+                            <p>+63 9763660509</p>
+                            <p>+63 9686893015</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="question-container">
+                    <h2>Have Any Question?</h2>
+                    <p>It is a long established fact that a reader will be distracted in
+                        content of a page when looking
+                    </p>
+                    <div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
