--- a/pages/challenge.html
+++ b/pages/challenge.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/navbar.css">
+    <link rel="stylesheet" href="../style/pageheader.css">
     <title>EladFit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
@@ -21,20 +22,28 @@
         <ul class="sidebar">
             <li class="close-button" onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFE3D8"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             <li><a href="tutorial.html">Tutorials</a></li>
-            <li><a href="program.html">Programs</a></li>
             <li><a href="challenge.html">Challenges</a></li>
-            <li><a href="supportUs.html">Support Us</a></li>
+            <li><a href="program.html">Programs</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
         <ul>
             <li id="links"><a href="../index.html">EladFit</a></li>
             <li id="links" class="hideOnMobile"><a href="tutorial.html">Tutorials</a></li>
-            <li id="links" class="hideOnMobile"><a href="program.html">Challenges</a></li>
-            <li id="links" class="hideOnMobile"><a href="challenge.html">Programs</a></li>
-            <li id="links" class="hideOnMobile"><a href="supportUs.html">Support Us</a></li>
+            <li id="links" class="hideOnMobile"><a href="challenge.html">Challenges</a></li>
+            <li id="links" class="hideOnMobile"><a href="program.html">Programs</a></li>
             <li id="links" class="hideOnMobile"><a href="contact.html">Contact</a></li>
+            <li id="links" class="hideOnMobile"><a href="about.html">About</a></li>
             <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#F5F5F5"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
         </ul>
     </nav>
+    <main>
+        <header>
+            <div class="header-navigation">
+                <h1>Challenges</h1>
+                <p><a href="../index.html"">Home</a> / Challenges</p>
+            </div>
+        </header>
+    </main>
 </body>
 </html>
